# lan_mesh

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: release.yml
core/: Cargo.toml
core-ffi/: Cargo.toml
core-ffi/src/: lib.rs
core/src/: file_transfer.rs  frame.rs  lib.rs  protocol.rs  session.rs
core/src/session/: tests.rs
tauri-app/: index.html  package.json
tauri-app/scripts/: dist.ps1  prepare-dist.ps1
tauri-app/src/: main.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: commands.rs  events.rs  ids.rs  lib.rs  main.rs  network.rs  state.rs  updates.rs  views.rs
