[package]
name = "lan-mesh-tauri"
version = "0.1.0"
edition = "2024"

[lib]
name = "lan_mesh_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lan_mesh_core = { package = "core", path = "../../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.10.1"
tokio = { version = "1.52.3", features = ["sync"] }
uuid = "1.23.4"
